apt-clone (0.1.2) UNRELEASED; urgency=low

  * add apt-clone info command

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 28 Mar 2011 15:28:57 +0200

apt-clone (0.1.1) natty; urgency=low

  * debian/contro:
    - add missing build-depends, tis fixes a FTBFS
  * apt_clone.py:
    - when a empty dir is given as the destination bootstrap 
      first and then restore the clone

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 22 Mar 2011 10:14:59 +0100

apt-clone (0.1) natty; urgency=low

  * initial version

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 16 Feb 2011 20:17:52 +0100