@@ -1,6 +1,11 @@
 apt-clone (0.1.2) UNRELEASED; urgency=low
 
-  * add apt-clone info command
+  * add apt-clone info command to get info about a existing apt-clone
+    archive
+  * apt_clone.py:
+    - be more robust against situations where a pacakge fails to be
+      marked for install during the restore (e.g. in a clone-upgrade
+      situation). Thanks to Evan Dandrea
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 28 Mar 2011 15:28:57 +0200
 
